# kofi_vote

./: .gitignore  Cargo.toml  public note.md
src/: lib.rs
voters_contact/: Cargo.toml  public note.md
voters_contact/src/: lib.rs
